--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -1,7 +1,7 @@
 <div class="article-news col-md-4 col-sm-12 col-12 mt-2">
   <div class="p-3 bg-white">
     <a href="{{ site.url }}{{ post.url }}" class="text-decoration-none">
-        {% if post.thumbnail %}<img src="{{site.url}}/img/post/{{post.thumbnail}}" alt="thumbnail of {{ post.title }}" class="article-thumbnail" loading="lazy">{% endif %}
+        {% if post.thumbnail %}<img src="{{site.url}}/img/post/{{post.thumbnail}}" alt="{{ post.title }} のサムネイル画像" class="article-thumbnail" loading="lazy">{% endif %}
       <div class="mt-2">
         <p class="article-date mt-2">{{ post.date | date:"%Y.%-m.%d" }}</p>
         <p class="article-title text-left font-weight-bold">{{ post.title }}</p>
