--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-main fixed-top">
     <a class="navbar-brand" href="{{site.url}}">
-      <img src="{{site.url}}/img/nav-icon.png" height="40px" class="d-inline-block align-top" alt="">
+      <img src="{{site.url}}/img/nav-icon.png" height="40px" class="d-inline-block align-top" alt="ナビゲーション・アイコン">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
