--- a/_layouts/jiman_text.html
+++ b/_layouts/jiman_text.html
@@ -20,11 +20,10 @@ layout: default
   {%endif%}
 
   <div class='post-content mt-5'>
-
-		{% if page.thumbnail %}
-		<img src="{{site.url}}/img/post/{{page.thumbnail}}" />
-		{% else %}
-		<img src="{{site.url}}/img/ogp_1.png" />
+    {% if page.thumbnail %}
+    <img src="{{site.url}}/img/post/{{page.thumbnail}}" alt='サムネイル画像' />
+    {% else %}
+    <img src="{{site.url}}/img/ogp_1.png" alt='サムネイル画像' />
     {% endif %}
 
     {{ content }}
@@ -32,15 +31,15 @@ layout: default
     <hr>
     <div class="row">
       <div class="col-2">
-          <div class="col">
-            {% if page.dojo_icon %}
-              <img src="https://raw.githubusercontent.com/coderdojo-japan/coderdojo.jp/master/public/img/dojos/{{page.dojo_icon}}" />
-            {% elsif page.dojo_iconfile %}
-              <img src="{{site.url}}/img/post/jiman/{{page.dojo_iconfile}}" />
-            {% else %}
-              <img src="https://coderdojo.jp/img/dojos/coderdojo.png" />
-            {% endif %}
-          </div>
+        <div class="col">
+          {% if page.dojo_icon %}
+          <img src="https://raw.githubusercontent.com/coderdojo-japan/coderdojo.jp/master/public/img/dojos/{{page.dojo_icon}}" alt='CoderDojo ロゴ画像' />
+          {% elsif page.dojo_iconfile %}
+          <img src="{{site.url}}/img/post/jiman/{{page.dojo_iconfile}}" alt='Dojo アイコン' />
+          {% else %}
+          <img src="https://coderdojo.jp/img/dojos/coderdojo.png" alt='CoderDojo ロゴ画像' />
+          {% endif %}
+        </div>
       </div>
       <div class="col-10">
         <p class="text-left font-weight-bold h4">{{ page.dojo_name }}</p>
