--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
-	<head>
-		<meta charset="utf-8">
-		<title>{%if page.title%}{{page.title}} | {%endif%}{{ site.title }} {{page.copy}}</title>
-		
+  <head>
+    <meta charset="utf-8">
+    <title>{%if page.title%}{{page.title}} | {%endif%}{{ site.title }} {{page.copy}}</title>
+    
     <script src="https://kit.fontawesome.com/c6331cba56.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-		<link rel="icon" type="image/png" href="/img/favicon/logo.png">
+    <link rel="icon" type="image/png" href="/img/favicon/logo.png">
 
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-		
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    
 
-		<link rel="stylesheet" href="/css/main.css" />
-  
+    <link rel="stylesheet" href="/css/main.css" />
+    
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@DojoConJapan" />
     <meta property="og:url" content="{{site.url}}{{page.url}}" />
-		{% if page.title %}
-		<meta property="og:title" content="{{page.title}} | {{site.title}}" />
-		{% else %}
-		<meta property="og:title" content="{{site.title}}" />
-		{% endif %}
+    {% if page.title %}
+    <meta property="og:title" content="{{page.title}} | {{site.title}}" />
+    {% else %}
+    <meta property="og:title" content="{{site.title}}" />
+    {% endif %}
 
-		{% if page.thumbnail %}
-		<meta property="og:image" content="{{site.url}}/img/post/{{page.thumbnail}}" />
-		{% else %}
-		<meta property="og:image" content="{{site.url}}/img/ogp_1.png" />
-		{% endif %}
+    {% if page.thumbnail %}
+    <meta property="og:image" content="{{site.url}}/img/post/{{page.thumbnail}}" />
+    {% else %}
+    <meta property="og:image" content="{{site.url}}/img/ogp_1.png" />
+    {% endif %}
 
-		{% if page.url != "/" %}
-			<meta property="og:type" content="article" />
-		{% else %}
-			<meta property="og:type" content="website" />
-		{% endif %}
+    {% if page.url != "/" %}
+    <meta property="og:type" content="article" />
+    {% else %}
+    <meta property="og:type" content="website" />
+    {% endif %}
 
-		<meta property="og:description" content="{{site.description}}" />
-		<meta name="description" content="{{site.description}}">
+    <meta property="og:description" content="{{site.description}}" />
+    <meta name="description" content="{{site.description}}">
 
     <meta property="fb:app_id" content="1750803431730303" />
 
@@ -48,25 +48,25 @@
     {% include googleanalytics.html %}
     {% endif %}
 
-	</head>
-	<body>
+  </head>
+  <body>
     {% include navbar.html %}
-		{{content}}
-		<div id="page-top"><a href="#"><img src="{{site.url}}/img/svg/up.svg" alt="Up" width="24px"></a></div>
-		{% include footer.html %}
+    {{content}}
+    <div id="page-top"><a href="#top"><img src="{{site.url}}/img/svg/up.svg" alt="Up" width="24px" /></a></div>
+    {% include footer.html %}
 
-		<script>
-		window.onload = function() {
-			var agent = window.navigator.userAgent.toLowerCase();
-			var ie11 = (agent.indexOf('trident/7') !== -1);
-			if(ie11){
-				var spimg = document.getElementsByClassName("sponsors-rank-img");
-				for(var i = 0; i < spimg.length; i++) {
-    			spimg[i].style.height = "auto";
-    			spimg[i].style.maxHeight = "none";
-				}
-			}
-		}
-		</script>
-	</body>
+    <script>
+     window.onload = function() {
+       var agent = window.navigator.userAgent.toLowerCase();
+       var ie11 = (agent.indexOf('trident/7') !== -1);
+       if(ie11){
+	 var spimg = document.getElementsByClassName("sponsors-rank-img");
+	 for(var i = 0; i < spimg.length; i++) {
+    	   spimg[i].style.height = "auto";
+    	   spimg[i].style.maxHeight = "none";
+	 }
+       }
+     }
+    </script>
+  </body>
 </html>
