--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,11 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>{%if page.title%}{{page.title}} | {%endif%}{{ site.title }} {{page.copy}}</title>
+    {% if page.title %}
+    <title>{{ page.title }} | {{ site.title }} {{ site.year }}</title>
+    {% else %}
+    <title>{{ site.title }} {{ site.year }} | {{ site.subtitle }}</title>
+    {% endif %}
     
     <script src="https://kit.fontawesome.com/c6331cba56.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
