--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 {% endif %}
 
 <div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
+  <h1 class="post-title">{{ page.title | liquify }}</h1>
 
   {% if page.categories[0] == "news" %}
     <p class="post-date">{{ page.date | date:"%Y.%-m.%-d" }}</p>
