--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,19 +22,22 @@
     <link rel="stylesheet" href="/css/main.css" />
     
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@DojoConJapan" />
+    <meta name="twitter:card"  content="summary_large_image" />
+    <meta name="twitter:site"  content="@DojoConJapan" />
+
     <meta property="og:url" content="{{site.url}}{{page.url}}" />
     {% if page.title %}
     <meta property="og:title" content="{{page.title}} | {{site.title}}" />
     {% else %}
-    <meta property="og:title" content="{{site.title}}" />
+    <meta property="og:title" content="{{site.title}} | {{site.subtitle}}" />
     {% endif %}
 
     {% if page.thumbnail %}
-    <meta property="og:image" content="{{site.url}}/img/post/{{page.thumbnail}}" />
+    <meta name="twitter:image" content="{{site.url}}//img/post/{{page.thumbnail}}" />
+    <meta property="og:image"  content="{{site.url}}/img/post/{{page.thumbnail}}" />
     {% else %}
-    <meta property="og:image" content="{{site.url}}/img/ogp_1.png" />
+    <meta name="twitter:image" content="{{site.url}}/img/home.jpg" />
+    <meta property="og:image"  content="{{site.url}}/img/home.jpg" />
     {% endif %}
 
     {% if page.url != "/" %}
@@ -43,8 +46,9 @@
     <meta property="og:type" content="website" />
     {% endif %}
 
-    <meta property="og:description" content="{{site.description}}" />
-    <meta name="description" content="{{site.description}}">
+    <meta property="og:description"  content="{{site.description}}" />
+    <meta name="description"         content="{{site.description}}" />
+    <meta name="twitter:description" content="{{site.description}}" />
 
     <meta property="fb:app_id" content="1750803431730303" />
 
