--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,12 +13,12 @@
         <a class="nav-item nav-link active" href="{{site.url}}#outline">概要</a>
         <a class="nav-item nav-link active" href="{{site.url}}#news">お知らせ</a>
         <!--<a class="nav-item nav-link active" href="{{site.url}}/timetable">タイムテーブル</a>-->
-        <!--<a class="nav-item nav-link active" href="{{site.url}}/session">セッション</a>-->
-        <!--<a class="nav-item nav-link active" href="{{site.url}}/event">イベント企画</a>-->
+        <!--<a class="nav-item nav-link active" href="{{site.url}}/sessions">セッション</a>-->
+        <!--<a class="nav-item nav-link active" href="{{site.url}}/events">イベント企画</a>-->
         <!--<a class="nav-item nav-link active" href="{{site.url}}/contest">コンテスト</a>-->
-        <!--<a class="nav-item nav-link active" href="{{site.url}}/workshop">ワークショップ</a>-->
+        <!--<a class="nav-item nav-link active" href="{{site.url}}/workshops">ワークショップ</a>-->
         <!--<a class="nav-item nav-link active" href="{{site.url}}/dojo-jiman">Dojo自慢</a>-->
-        <a class="nav-item nav-link active" href="{{site.url}}#contactus">お問い合わせ</a>
+        <a class="nav-item nav-link active" href="{{site.url}}#contact">お問い合わせ</a>
       </div>
     </div>
 
