--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,23 +1,23 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-main fixed-top">
-    <a class="navbar-brand" href="{{ site.url }}">
-      <img src="{{ site.url }}/img/nav-icon.png" height="40px" class="d-inline-block align-top" alt="ナビゲーション・アイコン">
+    <a class="navbar-brand" href="/">
+      <img src="/img/nav-icon.png" height="40px" class="d-inline-block align-top" alt="ナビゲーション・アイコン">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbar-nav">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="{{ site.url }}">ホーム <span class="sr-only"></span></a>
-        <a class="nav-item nav-link active" href="{{ site.url }}#outline">概要</a>
-        <a class="nav-item nav-link active" href="{{ site.url }}#news">お知らせ</a>
-        <!--<a class="nav-item nav-link active" href="{{ site.url }}/timetable">タイムテーブル</a>-->
-        <!--<a class="nav-item nav-link active" href="{{ site.url }}/sessions">セッション</a>-->
-        <!--<a class="nav-item nav-link active" href="{{ site.url }}/events">イベント企画</a>-->
-        <!--<a class="nav-item nav-link active" href="{{ site.url }}/contest">コンテスト</a>-->
-        <!--<a class="nav-item nav-link active" href="{{ site.url }}/workshops">ワークショップ</a>-->
-        <!--<a class="nav-item nav-link active" href="{{ site.url }}/dojos">Dojo自慢</a>-->
-        <a class="nav-item nav-link active" href="{{ site.url }}#contact">お問い合わせ</a>
+        <a class="nav-item nav-link active" href="/">ホーム <span class="sr-only"></span></a>
+        <a class="nav-item nav-link active" href="/#outline">概要</a>
+        <a class="nav-item nav-link active" href="/#news">お知らせ</a>
+        <!--<a class="nav-item nav-link active" href="/timetable">タイムテーブル</a>-->
+        <!--<a class="nav-item nav-link active" href="/sessions">セッション</a>-->
+        <!--<a class="nav-item nav-link active" href="/events">イベント企画</a>-->
+        <!--<a class="nav-item nav-link active" href="/contest">コンテスト</a>-->
+        <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
+        <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
+        <a class="nav-item nav-link active" href="/#contact">お問い合わせ</a>
       </div>
     </div>
   </nav>
