--- a/_layouts/jiman_media.html
+++ b/_layouts/jiman_media.html
@@ -13,11 +13,11 @@ layout: default
   {% elsif page.categories[0] == "workshop" or page.categories[0] == "session" %}
     <div class="tags">
       {% for tag in page.tags %}
-        <span class="tag-post">{{tag}}</span>
+        <span class="tag-post">{{ tag }}</span>
       {% endfor %}
     </div>
-    <p class="post-time">{{page.time}}</p>
-  {%endif%}
+    <p class="post-time">{{ page.time }}</p>
+  {% endif %}
 
 
   <div class='post-content mt-5'>
@@ -29,9 +29,9 @@ layout: default
         {% if page.dojo_icon %}
           <img src="https://raw.githubusercontent.com/coderdojo-japan/coderdojo.jp/master/public/img/dojos/{{page.dojo_icon}}" alt='Dojo アイコン' />
         {% elsif page.dojo_iconfile %}
-          <img src="{{site.url}}/img/post/jiman/{{page.dojo_iconfile}}" alt='Dojo アイコン'/>
+          <img src="/img/post/jiman/{{ page.dojo_iconfile }}" alt='Dojo アイコン'/>
         {% else %}
-          <img src="https://coderdojo.jp/img/dojos/coderdojo.png" alt='CoderDojo ロゴ'/>
+          <img src="/img/coderdojo.png" alt='CoderDojo ロゴ'/>
         {% endif %}
       </div>
       <div class="col-10">
@@ -40,7 +40,7 @@ layout: default
       </div>
     </div>
     <div id="spacer" style="height: 2em;"></div>
-    <a href="/dojo-jiman/" class="btn btn-red"><i class="fas fa-chevron-circle-left"></i> 一覧に戻る</a>
+    <a href="/dojos" class="btn btn-red"><i class="fas fa-chevron-circle-left"></i> 一覧に戻る</a>
     <br />
     <a href="/" class="btn btn-red"><i class="fas fa-chevron-circle-left"></i> トップページに戻る</a>
   </div>
