--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -250,55 +250,70 @@ footer {
 }
 
 
-  //フッターのシェアボタン
-  .share {
-    a {
-      float: left;
-      line-height: 60px;
-      height: 60px;
-      width: 50%;
-      text-decoration-line: none;
-    }
-    &::after {
-      content: '';
-      clear: both;
-      display: block;
-    }
-    .share-twitter,
-    .share-facebook {
-      display: block;
-    }
+//フッターのシェアボタン
+.share {
+  a {
+    float: left;
+    line-height: 60px;
+    height: 60px;
+    width: 50%;
+    text-decoration-line: none;
   }
+  &::after {
+    content: '';
+    clear: both;
+    display: block;
+  }
+  .share-twitter,
   .share-facebook {
-    background-color: $facebook-color;
+    display: block;
   }
-  .share-twitter {
-    background-color: $twitter-color;
+}
+.share-facebook {
+  background-color: $facebook-color;
+}
+.share-twitter {
+  background-color: $twitter-color;
+}
+.share-line {
+  background-color: $line-color;
+  display: none;
+}
+@media screen and (max-width: 800px) {
+  .share a {
+    width: 100%;
   }
   .share-line {
-    background-color: $line-color;
+    display: block;
+  }
+}
+
+.bg-main{
+  background-color: $main-color;
+}
+
+.title-text{
+  font-family: 'Noto Sans JP', sans-serif;
+  font-weight: bold;
+}
+  
+/* 改行位置の調整 */
+.ignore-pc {
+  display: none;
+}
+.ignore-sp {
+  display: inline;
+}
+@media screen and (max-width: 640px) {
+  .ignore-pc {
+    display: inline;
+  }
+  .ignore-sp {
     display: none;
   }
-  @media screen and (max-width: 800px) {
-    .share a {
-      width: 100%;
-    }
-    .share-line {
-      display: block;
-    }
-  }
-
-  .bg-main{
-    background-color: $main-color;
-  }
-
-  .title-text{
-    font-family: 'Noto Sans JP', sans-serif;
-    font-weight: bold;
-  }
+}  
 
 // テーブル
-
 table {
   border-collapse: collapse;
   border-spacing: 0;
