Add internal link '#top' to navigation bar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark text-white bg-main fixed-top">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="/#top">
       <img src="/img/nav-icon.png" height="40px" class="d-inline-block align-top" alt="ナビゲーション・アイコン">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,7 +8,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar-nav">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/">ホーム <span class="sr-only"></span></a>
+        <a class="nav-item nav-link active" href="/#top">ホーム <span class="sr-only"></span></a>
         <a class="nav-item nav-link active" href="/#outline">概要</a>
         <a class="nav-item nav-link active" href="/#news">お知らせ</a>
         <!--<a class="nav-item nav-link active" href="/timetable">タイムテーブル</a>-->
