--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -29,7 +29,7 @@
 .post-head {
 
   background-color: $main-color;
-  color: #fff;
+  // color: #fff;
   margin-bottom: 60px;
   padding: $navbar 0;
   padding-top: 60px;
