--- a/_sass/_top.scss
+++ b/_sass/_top.scss
@@ -415,68 +415,80 @@
 
   .top{
     position: relative;
-    height: 100vh;
-    //background: linear-gradient(rgba(235,255,209,0.5),rgba(235,255,209,0.5)), url("/img/mainvisual.png");
-    background: linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), url("/img/mainvisual.png");
-    background-size: contain;
+    height: calc(100vh - 60px);
+    background: url("/img/mainvisual-bg.png");
+    background-size: cover;
     background-position:center center;
     background-repeat: no-repeat;
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    img {
+      max-width: 90vw;
+      max-height: 80vh;
+      height: auto;
+    }
     
-    .top-texts {
+    // .top-texts {
+    //   h1 {
+    //     color: $main-color;
+    //     font-size: 6em;
+    //     text-align: center;
+    //     font-family: 'Saira Semi Condensed', sans-serif;
+    //     line-height: 6rem;
+    //     margin: 0 0 1rem;
+    //     text-shadow: 
+    //       2px  2px 1px $light-green,
+    //       -2px 2px 1px $light-green,
+    //       2px -2px 1px $light-green,
+    //       -2px -3px 1px $light-green,
+    //       2px 0px 1px $light-green,
+    //       0px 2px 1px  $light-green,
+    //       -2px 0px 1px $light-green,
+    //       0px -2px 1px $light-green;  
+    //   }
+
+    //   h2 {
+    //     color: #fff;
+    //     background-color: $secondary-color;
+    //     font-size: 3em;
+    //     font-family: 'Noto Sans JP', sans-serif;
+    //     margin: 0 0 1rem 0;
+    //   }
+
+    //   h3 {
+    //     color: $red;
+    //     background-color: $light-red;
+    //     font-weight: bold;
+    //     font-size: 2em;
+    //     margin: 0 0 .5rem 0;
+    //   }
+
+    //   @media screen and (max-width: 600px) {
+    //     h1 {
+    //       font-size: 5em; 
+    //       text-align: center;
+    //       line-height: 5rem;
+    //     }
+
+    //     h2 {
+    //       font-size: 1.8em;
+    //       margin: 0 1rem 1rem 1rem;
+    //     }
+
+    //     h3 {
+    //       font-size: 1.3em;
+    //       margin: 0 1rem .5rem 1rem;
+    //     }
+    //   }
+    // }
+  }
+  @media screen and (max-width: 640px) {
+    .top {
       h1 {
-        color: $main-color;
-        font-size: 6em;
-        text-align: center;
-        font-family: 'Saira Semi Condensed', sans-serif;
-        line-height: 6rem;
-        margin: 0 0 1rem;
-        text-shadow: 
-          2px  2px 1px $light-green,
-          -2px 2px 1px $light-green,
-          2px -2px 1px $light-green,
-          -2px -3px 1px $light-green,
-          2px 0px 1px $light-green,
-          0px 2px 1px  $light-green,
-          -2px 0px 1px $light-green,
-          0px -2px 1px $light-green;  
-      }
-
-      h2 {
-        color: #fff;
-        background-color: $secondary-color;
-        font-size: 3em;
-        font-family: 'Noto Sans JP', sans-serif;
-        margin: 0 0 1rem 0;
-      }
-
-      h3 {
-        color: $red;
-        background-color: $light-red;
-        font-weight: bold;
-        font-size: 2em;
-        margin: 0 0 .5rem 0;
-      }
-
-      @media screen and (max-width: 600px) {
-        h1 {
-          font-size: 5em; 
-          text-align: center;
-          line-height: 5rem;
-        }
-
-        h2 {
-          font-size: 1.8em;
-          margin: 0 1rem 1rem 1rem;
-        }
-
-        h3 {
-          font-size: 1.3em;
-          margin: 0 1rem .5rem 1rem;
-        }
+        transform: translateY(-25px);
       }
     }
   }
