--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,8 @@
-$main-color: #69b800;
-$secondary-color: #ffdb4d;
-$third-color: #689924;
+$main-color: #faee00;
+$secondary-color: #2ca6e0;
+$third-color: #004466;
+
+$light-yellow: #fffacf;
 
 $light-green: #ebffd1;
 
