--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark text-white bg-main fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-main fixed-top">
     <a class="navbar-brand" href="/#top">
-      <img src="/img/nav-icon.png" height="40px" class="d-inline-block align-top" alt="ナビゲーション・アイコン">
+      <img src="/img/nav-icon.png" height="30" class="d-inline-block align-top" alt="ナビゲーション・アイコン">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
