Revert param to flush OGP image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   <meta property="og:image"  content="{{ site.url }}/img/post/{{ page.thumbnail }}" />
   {% else %}
   <meta name="twitter:image" content="{{ site.url }}/img/home.jpg" />
-  <meta property="og:image"  content="{{ site.url }}/img/home.jpg?cache=clear" />
+  <meta property="og:image"  content="{{ site.url }}/img/home.jpg" />
   {% endif %}
 
   {% if page.url != "/" %}
