イベント企画ページの内容を追加

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
         <a class="nav-item nav-link active" href="/#news">お知らせ</a>
         <!--<a class="nav-item nav-link active" href="/timetable">タイムテーブル</a>-->
         <!--<a class="nav-item nav-link active" href="/sessions">セッション</a>-->
-        <!--<a class="nav-item nav-link active" href="/events">イベント企画</a>-->
+        <a class="nav-item nav-link active" href="/events">イベント企画</a>
         <!--<a class="nav-item nav-link active" href="/contest">コンテスト</a>-->
         <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
         <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
