--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -7,8 +7,8 @@
 }
 
 .btn-main{
-    background-color: $red;
-    color: white;
+    background-color: $light-blue;
+    color: black;
 }
 
 .btn-secondary {
