--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,8 +8,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar-nav">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/#top">ホーム <span class="sr-only"></span></a>
-        <a class="nav-item nav-link active" href="/#outline">概要</a>
+        <a class="nav-item nav-link active" href="/#top">TOP</a>
+        <!--<a class="nav-item nav-link active" href="/#outline">概要</a>-->
         <a class="nav-item nav-link active" href="/#news">お知らせ</a>
         <!--<a class="nav-item nav-link active" href="/timetable">タイムテーブル</a>-->
         <a class="nav-item nav-link active" href="/sessions">セッション</a>
@@ -17,8 +17,8 @@
         <!--<a class="nav-item nav-link active" href="/contest">コンテスト</a>-->
         <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
         <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
-        <a class="nav-item nav-link active" href="/#contact">お問い合わせ</a>
-	<a class="nav-item nav-link active" href="/#ticket">参加申込（無料）</a>
+        <a class="nav-item nav-link active" href="/#contact">問い合わせ</a>
+	<a class="nav-item nav-link active" href="/#ticket">参加申込</a>
       </div>
     </div>
   </nav>
