Follow the naming pattern of DojoCon Japan 実行委員会 in 2022

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,5 +12,5 @@
       <li><a href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">Twitter</a></li>
     </ul>
   </nav>
-  <p class="copyright">&copy; DojoCon Japan {{ site.year }} 実行委員会</p>
+  <p class="copyright">&copy; DojoCon Japan 実行委員会</p>
 </footer>
