replace OGP Picture

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,8 +30,8 @@
   <meta name="twitter:image" content="{{ site.url }}/img/post/{{ page.thumbnail }}" />
   <meta property="og:image"  content="{{ site.url }}/img/post/{{ page.thumbnail }}" />
   {% else %}
-  <meta name="twitter:image" content="{{ site.url }}/img/ogp_2021.jpg" />
-  <meta property="og:image"  content="{{ site.url }}/img/ogp_2021.jpg" />
+  <meta name="twitter:image" content="{{ site.url }}/img/ogp_2023.png" />
+  <meta property="og:image"  content="{{ site.url }}/img/ogp_2023.png" />
   {% endif %}
 
   {% if page.url != "/" %}
