画像データ整理、仮サイト、OGP変更

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,8 +30,8 @@
   <meta name="twitter:image" content="{{ site.url }}/img/post/{{ page.thumbnail }}" />
   <meta property="og:image"  content="{{ site.url }}/img/post/{{ page.thumbnail }}" />
   {% else %}
-  <meta name="twitter:image" content="{{ site.url }}/img/ogp_2023b.png" />
-  <meta property="og:image"  content="{{ site.url }}/img/ogp_2023b.png" />
+  <meta name="twitter:image" content="{{ site.url }}/img/2023/ogp/1200x630_01_date.jpg" />
+  <meta property="og:image"  content="{{ site.url }}/img/2023/ogp/1200x630_01_date.jpg" />
   {% endif %}
 
   {% if page.url != "/" %}
