--- a/_layouts/teaser.html
+++ b/_layouts/teaser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
   {% include head.html %}
-  <body>
+  <body style="background-color: #7e2639; padding-top: 0;">
     {{ content }}
   </body>
 </html>
