ページ用の SASS ファイルを階層化して追加

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,3 +23,10 @@ $navbar: 60px;
 @import 'layouts/jiman_text';
 @import 'layouts/page';
 @import 'layouts/post';
+
+@import 'pages/code-of-conduct';
+@import 'pages/events';
+@import 'pages/index';
+@import 'pages/privacy';
+@import 'pages/sessions';
+@import 'pages/workshop';
