--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
-$main-color: #faee00;
-$secondary-color: #2ca6e0;
-$third-color: #004466;
+$main-color: #7e2639;
+$secondary-color: #41BAC1;
+$third-color:#642580;
 
 $light-yellow: #fffacf;
 
