--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -7,7 +7,7 @@ body {
   font-family: 'Roboto', 'Noto Sans JP', sans-serif;
   margin: 0;
   text-align: center;
-  color: $third-color;
+  color: black;
   padding-top: 60px;
 }
 
@@ -218,7 +218,7 @@ footer {
 
 //ヘッダーのナビゲーションバー
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-  color: $third-color;
+  color: black;
 }
 @media screen and (max-width: 640px) {
   .navbar-brand {
