--- a/_sass/global/page.scss
+++ b/_sass/global/page.scss
@@ -9,7 +9,7 @@ body {
   font-family: 'Roboto', 'Noto Sans JP', sans-serif;
   margin: 0;
   text-align: center;
-  color: $third-color;
+  color: black;
   padding-top: 60px;
 }
 
@@ -287,9 +287,10 @@ table thead th {
 }
 
 .badge-ws{
-    font-weight: bold;
+    font-weight: normal;
     font-size: 14px;
-    background-color: $light-blue;
+    background-color: $main-color;
+    color: white;
 }
 
 .badge-main{
@@ -304,8 +305,8 @@ table thead th {
 
 /* button */
 .btn-main{
-    background-color: $light-blue;
-    color: black;
+    background-color: $main-color;
+    color: white;
 }
 
 .btn-secondary {
