--- a/_sass/layouts/post.scss
+++ b/_sass/layouts/post.scss
@@ -4,8 +4,9 @@
   margin-bottom: 12vh;
   text-align: left;
   padding: 0 1rem;
-  h1 {
+  h1.post-title {
     text-align: center;
+    font-size: 2rem;
   }
   .post-date,
   .post-time {
@@ -15,22 +16,29 @@
     padding: 24px 0;
     max-width: 800px;
     margin: auto;
+    h2 {
+      text-align: center;
+    }
     img {
       display: block;
       width: 100%;
       margin: auto;
       max-width: 600px;
     }
+    a.btn {
+      color: $main-color;
+    }
   }
 }
 
 .post-head {
-  background-color: $main-color;
   margin-bottom: 60px;
   padding: $navbar 0;
   padding-top: 60px;
   h2 {
     margin: 0;
+    font-weight: 700;
+    font-size: 2.5rem;
   }
 }
 
