footerとnavbarのcssを変更しました。

--- a/_sass/includes/footer.scss
+++ b/_sass/includes/footer.scss
@@ -1,7 +1,7 @@
 /* stylesheet for `_includes/footer.html` */
 
 footer {
-  background-color: $third-color;
+  background-color: $secondary-color;
   color: #fff;
   padding-bottom: 12px;
 }
