--- a/_sass/includes/navbar.scss
+++ b/_sass/includes/navbar.scss
@@ -4,15 +4,20 @@
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show>.nav-link {
-  color: $third-color;
+  color: black;
 }
-
+.rights{
+  justify-content: flex-end;
+}
+.navbar_btn{
+  color: white;
+}
 @media screen and (max-width: 640px) {
   .navbar-brand {
     display: flex;
     align-items: center;
     img {
-      max-width: 72vw;
+      max-width: 70vw;
       height: auto;
     }
   }
@@ -20,7 +25,7 @@
 @media screen and (max-width: 360px) {
   .navbar-brand {
     img {
-      max-width: 67vw;
+      max-width: 60vw;
     }
   }
 }
