--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbar-nav">
+      <div class="collapse navbar-collapse" id="navbar-nav" style="padding-right: 10px;">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="/#top">TOP</a>
           <!--<a class="nav-item nav-link active" href="/#outline">概要</a>-->
@@ -19,7 +19,7 @@
           <!--<a class="nav-item nav-link active" href="/workshops">ワークショップ</a>-->
           <!--<a class="nav-item nav-link active" href="/dojos">Dojo自慢</a>-->
           <a class="nav-item nav-link active" href="/#contact">問い合わせ</a>
-          <a class="nav-item nav-link active " href="/#ticket">参加申し込み</a>
+          <a class="nav-item nav-link active link_button" href="/#ticket" style="padding-left:30px;padding-right: 30px;color:white;font-weight: normal;">参加申し込み</a>
         </div>
       </div>
   </nav>
