--- a/_sass/includes/navbar.scss
+++ b/_sass/includes/navbar.scss
@@ -6,11 +6,31 @@
 .navbar-light .navbar-nav .show>.nav-link {
   color: black;
 }
-.rights{
+.navbar-light .navbar-nav .nav-link.active{
+  padding-left:15px ;
+  padding-right: 15px;
+}
+.navbar-expand-lg .navbar-collapse {
   justify-content: flex-end;
 }
-.navbar_btn{
-  color: white;
+.link_button{
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 240px;
+  padding: 5px 25px;
+  color: #5a1891;
+  transition: 0.3s ease-in-out;
+  font-weight: normal;
+  background: $main-color;
+  border-radius: 8px;
+  border-bottom: solid 5px #5c1b29;
+}
+.link_button:hover {
+  border-bottom: solid 2px #5c1b29;
+  transform: translateY(3px);
 }
 @media screen and (max-width: 640px) {
   .navbar-brand {
