--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -85,6 +85,87 @@ section#contact {
   }
 }
 
+div#about {
+  h2 {
+    color: $secondary-color;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .wrapper-block {
+    display: grid;
+    grid-template-rows: auto auto auto;
+
+    color: #ffffff;
+    background: linear-gradient(to right, white 25%, white 25%,  $secondary-color 25%, $secondary-color 100%);
+
+    h3 {
+      font-size: 1.65em;
+      line-height: 1em;
+    }
+
+    .description {
+      p {
+        font-size: 0.85em;
+        line-height: 1.5em;
+      }
+    }
+
+    img {
+      max-width: 50vw;
+    }
+
+    section.first-section {
+      grid-row: 1;
+
+      display: grid;
+      grid-template-columns: 1fr 3fr 2fr 2fr;
+      column-gap: 20px;
+
+      img {
+        grid-column: 2;
+        width: 100%;
+        height: auto;
+      }
+
+      .description {
+        grid-column: 3;
+      }
+    }
+
+    section.second-section {
+      grid-row: 2;
+
+      display: grid;
+      grid-template-columns: 2fr 3fr 1fr 2fr;
+      column-gap: 20px;
+
+      .description {
+        grid-column:  2;
+      }
+
+      img {
+        grid-column: 3;
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+      }
+    }
+
+    section.third-section {
+      grid-row: 3;
+
+      display: grid;
+      grid-template-columns: 1fr 2fr 1fr;
+      column-gap: 20px;
+
+      .description {
+        grid-column: 2;
+      }
+    }
+  }
+}
+
 .container {
   a {
     color: $main-color;
