--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css" />
-  <link rel="manifest"   href="/site.webmanifest">
-  <link rel="icon" href="/favicon.ico"><!-- 32×32 -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
@@ -50,4 +46,48 @@
   {% include googleanalytics.html %}
   {% endif %}
 
+  <meta name="msapplication-square70x70logo" content="/img/{{ site.year }}/favicon/site-tile-70x70.png">
+  <meta name="msapplication-square150x150logo" content="/img/{{ site.year }}/favicon/site-tile-150x150.png">
+  <meta name="msapplication-wide310x150logo" content="/img/{{ site.year }}/favicon/site-tile-310x150.png">
+  <meta name="msapplication-square310x310logo" content="/img/{{ site.year }}/favicon/site-tile-310x310.png">
+  <meta name="msapplication-TileColor" content="/img/{{ site.year }}/favicon/#0078d7">
+  <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/img/{{ site.year }}/favicon/favicon.ico">
+  <link rel="icon" type="image/vnd.microsoft.icon" href="/img/{{ site.year }}/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="57x57" href="/img/{{ site.year }}/favicon/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/img/{{ site.year }}/favicon/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/img/{{ site.year }}/favicon/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/img/{{ site.year }}/favicon/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/img/{{ site.year }}/favicon/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/img/{{ site.year }}/favicon/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/img/{{ site.year }}/favicon/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/img/{{ site.year }}/favicon/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/{{ site.year }}/favicon/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="36x36" href="/img/{{ site.year }}/favicon/android-chrome-36x36.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/img/{{ site.year }}/favicon/android-chrome-48x48.png">
+  <link rel="icon" type="image/png" sizes="72x72" href="/img/{{ site.year }}/favicon/android-chrome-72x72.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/img/{{ site.year }}/favicon/android-chrome-96x96.png">
+  <link rel="icon" type="image/png" sizes="128x128" href="/img/{{ site.year }}/favicon/android-chrome-128x128.png">
+  <link rel="icon" type="image/png" sizes="144x144" href="/img/{{ site.year }}/favicon/android-chrome-144x144.png">
+  <link rel="icon" type="image/png" sizes="152x152" href="/img/{{ site.year }}/favicon/android-chrome-152x152.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/img/{{ site.year }}/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="/img/{{ site.year }}/favicon/android-chrome-256x256.png">
+  <link rel="icon" type="image/png" sizes="384x384" href="/img/{{ site.year }}/favicon/android-chrome-384x384.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/img/{{ site.year }}/favicon/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="36x36" href="/img/{{ site.year }}/favicon/icon-36x36.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/img/{{ site.year }}/favicon/icon-48x48.png">
+  <link rel="icon" type="image/png" sizes="72x72" href="/img/{{ site.year }}/favicon/icon-72x72.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/img/{{ site.year }}/favicon/icon-96x96.png">
+  <link rel="icon" type="image/png" sizes="128x128" href="/img/{{ site.year }}/favicon/icon-128x128.png">
+  <link rel="icon" type="image/png" sizes="144x144" href="/img/{{ site.year }}/favicon/icon-144x144.png">
+  <link rel="icon" type="image/png" sizes="152x152" href="/img/{{ site.year }}/favicon/icon-152x152.png">
+  <link rel="icon" type="image/png" sizes="160x160" href="/img/{{ site.year }}/favicon/icon-160x160.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/img/{{ site.year }}/favicon/icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="196x196" href="/img/{{ site.year }}/favicon/icon-196x196.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="/img/{{ site.year }}/favicon/icon-256x256.png">
+  <link rel="icon" type="image/png" sizes="384x384" href="/img/{{ site.year }}/favicon/icon-384x384.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/img/{{ site.year }}/favicon/icon-512x512.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/{{ site.year }}/favicon/icon-16x16.png">
+  <link rel="icon" type="image/png" sizes="24x24" href="/img/{{ site.year }}/favicon/icon-24x24.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/{{ site.year }}/favicon/icon-32x32.png">
+  <link rel="manifest" href="/img/{{ site.year }}/favicon/manifest.json">
 </head>
