--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,8 +26,8 @@
   <meta name="twitter:image" content="{{ site.url }}/img/post/{{ page.thumbnail }}" />
   <meta property="og:image"  content="{{ site.url }}/img/post/{{ page.thumbnail }}" />
   {% else %}
-  <meta name="twitter:image" content="{{ site.url }}/img/2023/ogp/1200x630_01_date.jpg" />
-  <meta property="og:image"  content="{{ site.url }}/img/2023/ogp/1200x630_01_date.jpg" />
+  <meta name="twitter:image" content="{{ site.url }}/img/{{ site.year }}/ogp/1200x630_01_date.jpg" />
+  <meta property="og:image"  content="{{ site.url }}/img/{{ site.year }}/ogp/1200x630_01_date.jpg" />
   {% endif %}
 
   {% if page.url != "/" %}
