--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -167,9 +167,9 @@ div#about {
 }
 
 .container {
-  a {
-    color: $main-color;
-  }
+  // a {
+  //   color: $main-color;
+  // }
 
   a.button {
     color: #ffffff;
