--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -211,3 +211,193 @@ div#about {
 .section-gray {
     background-color: $light-gray;
 }
+
+// トップページの内容
+
+.comming-soon {
+  font-size: 1.2em;
+  margin-bottom: 60px;
+}
+
+
+$corner-radius: 30px;
+#colored_zone {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: auto;
+  color: white;
+  text-align: left;
+  .main-visual {
+    grid-column: 1 / span 12;
+    grid-row: auto;
+    height: 200px;
+    .top-message {
+
+    }
+    .theme-phrase {
+
+    }
+    .event-date-and-location {
+
+    }
+    .dojocon-logo {
+
+    }
+    .character {
+
+    }
+  }
+  
+  .visual-delimiter {
+    grid-column: auto;
+    grid-row: auto;
+
+  }
+  .title-welcome {
+    grid-column: 3 / span 8;
+    grid-row: auto;
+    color: $secondary-color;
+    font-size: 5em;
+    text-align: right;
+    margin-bottom: 0;
+    font-weight: bold;
+    margin-bottom: -0.3em;
+  }
+  .dojocon-image {
+    grid-column: 3 / span 4;
+    grid-row: auto;
+    color: white;
+    background-color: $secondary-color;
+    border-radius: $corner-radius 0 0 0;
+    img {
+      padding-top: 60px;
+      margin-left: -20%;
+      width: 110%;
+    }
+  }
+  .about-dojocon {
+    grid-column: 7 / span 4;
+    padding-top: 60px;
+    padding-bottom: 15px;
+    background-color: $secondary-color;
+    text-align: left;
+    .short {
+      text-align: left;
+      padding: auto;
+      font-size: 2em;
+      font-weight: bold;
+    }
+    .long {
+      margin-top: 1.5em;
+      font-size: 1em;
+    }
+  }
+  .spacing {
+    grid-column: 11 / span 2;
+    background-color: $secondary-color;
+  }
+  .about-coderdojo {
+    grid-column: 3 / span 6;
+    grid-row: auto;
+    background-color: $secondary-color;
+    padding: 60px 15px 0 30px;
+    .short {
+      text-align: left;
+      padding: auto;
+      font-size: 2em;
+      font-weight: bold;
+    }
+    .long {
+      margin-top: 1.5em;
+      font-size: 1em;
+      .annotation {
+        font-size: 0.8em;
+      }
+    }
+  }
+  .coderdojo-logo {
+    grid-column: 9 / span 2;
+    grid-row: auto;
+    background-color: $secondary-color;
+    text-align: right;
+    padding-top: 60px;
+    img {
+      border-radius: 15px;
+      width: 100%;
+    }
+  }
+  .about-dojocon-this-year {
+    grid-column: 3 / span 8;
+    grid-row: auto;
+    background-color: $secondary-color;
+    border-radius: 0 0 0 $corner-radius;
+    padding: 60px 15px 60px 30px;
+    .short {
+      text-align: left;
+      padding: auto;
+      font-size: 2em;
+      font-weight: bold;
+    }
+    .long {
+      margin-top: 1.5em;
+      font-size: 1em;
+      .annotation {
+        font-size: 0.8em;
+      }
+    }
+  }
+}
+
+// タブレット
+@media screen and (max-width: 1280px) {
+  #colored_zone {
+    .title-welcome {
+      font-size: 6vw;
+      grid-column: 2 / span 10;
+    }
+    .dojocon-image {
+      grid-column: 2 / span 12;
+      img {
+        width: 80%;
+        margin-left: 0;
+      }
+    }
+    .about-dojocon {
+      grid-column: 2 / span 12;
+      padding-left: 30px;
+    }
+
+    .about-coderdojo {
+      grid-column: 2 / span 6;
+    }
+    .coderdojo-logo {
+      grid-column: 8 / span 4;
+      text-align: center;
+      img {
+        width: 60%;
+      }
+    }
+    .about-dojocon-this-year {
+      grid-column: 2 / span 12;
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  #colored_zone {
+    .coderdojo-logo {
+      grid-column: 2 / span 12;
+      text-align: center;
+      img {
+        width: 60%;
+      }
+    }
+    .about-coderdojo {
+      grid-column: 2 / span 12;
+    }
+    .about-dojocon-this-year {
+      grid-column: 2 / span 12;
+    }
+  }
+}
